force-app/main/default/objects/Manager__c/fields/Experiance__c.field-meta.xml
<CustomField>
    <fullName>Experiance__c</fullName>
    <label>Experiance</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>