force-app/main/default/objects/Manager__c/fields/Home_town__c.field-meta.xml
<CustomField>
    <fullName>Home_town__c</fullName>
    <label>Home town</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajmer</fullName>
                <default>true</default>
                <label>Ajmer</label>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Udaipur</fullName>
            </value>
            <value>
                <fullName>Kota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>