force-app/main/default/objects/Manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>